cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project (Advent2018)
set (CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)

add_subdirectory(fmt)

file(GLOB advent_srcs "day_*_*.cc")
foreach(advent_src ${advent_srcs})
	string(REGEX REPLACE ".*/" "" advant_src_name ${advent_src})
	string(REGEX REPLACE ".cc" "" advant_src_name ${advant_src_name})

	add_executable(${advant_src_name} ${advent_src})
	if(MSVC)
	  target_compile_options(${advant_src_name} PRIVATE /W4 /WX)
	else(MSVC)
	  target_compile_options(${advant_src_name} PRIVATE -Wall -Wextra -pedantic -Werror)
	endif(MSVC)
	target_link_libraries(${advant_src_name} PRIVATE fmt::fmt)
endforeach()
